--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,7 @@
 {
     "imports": {
-        "@std/path": "jsr:@std/path@^1.0.8"
+        "@std/path": "jsr:@std/path@^1.0.8",
+        "@std/random": "jsr:@std/random@^0.1.0"
     },
 
     "unstable": [
