feat: initial boilerplate for html visualization

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -34,6 +34,7 @@
         "check": "deno task check:format;deno task check:types;deno task check:lint",
         "bracket:clone": "deno run --allow-read --allow-run ./clone-repos.ts",
         "bracket:run": "deno run --allow-read --allow-run --allow-write ./run-bracket.ts",
+        "bracket:visualize": "deno run --allow-read --allow-write ./visualize-results.ts",
         "check:format": "deno fmt --check ./",
         "check:lint": "deno lint ./",
         "check:types": "deno check ./",
