--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,11 @@
         "editor.defaultFormatter": "denoland.vscode-deno"
     },
 
+    "[typescriptreact]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "denoland.vscode-deno"
+    },
+
     "[yaml]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "denoland.vscode-deno"
