--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
     "deno.enable": true,
     "deno.lint": true,
 
+    "[css]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "denoland.vscode-deno"
+    },
+
     "[json]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "denoland.vscode-deno"
