--- a/.github/workflows/practice-brackets.yaml
+++ b/.github/workflows/practice-brackets.yaml
@@ -14,7 +14,7 @@ jobs:
         runs-on: ubuntu-22.04
 
         outputs:
-            status: ${{ steps.date-check.outcome == 'failure' && 'success' || 'cancelled' }}
+            status: ${{ steps.date-check.outcome == 'failure' && 'cancelled' || 'success' }}
 
         steps:
             - name: Clone Repository
@@ -32,6 +32,7 @@ jobs:
 
     run-bracket:
         needs: check-date
+        if:
 
         runs-on: ubuntu-22.04
 
