feat: download latest version of game engine for practice bracket

--- a/.github/workflows/practice-brackets.yaml
+++ b/.github/workflows/practice-brackets.yaml
@@ -40,6 +40,10 @@ jobs:
               with:
                   deno-version: 2.1.4
 
+            - name: Download Game Engine
+              run: |
+                  wget --output-document ./.bin/dotsandboxes-linux https://github.com/PSH-Computing-AI-club/competition-spring-2025-dotsandboxes/releases/latest/download/dotsandboxes-linux
+
             - name: Clone Competitor Repositories
               run: deno task bracket:clone
 
