fix: permissions for clone script task

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -41,7 +41,7 @@
 
     "tasks": {
         "check": "deno task check:format;deno task check:types;deno task check:lint",
-        "bracket:clone": "deno run --allow-read --allow-run --allow-write ./bracket-clone.ts",
+        "bracket:clone": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write ./bracket-clone.ts",
         "bracket:run": "deno run --allow-read --allow-run --allow-write ./bracket-run.ts",
         "bracket:visualize": "deno run --allow-read --allow-write ./bracket-visualize.ts",
         "check:format": "deno fmt --check ./",
