fix: create bin directory before download since wget isn't doing it recursively

--- a/.github/workflows/practice-brackets.yaml
+++ b/.github/workflows/practice-brackets.yaml
@@ -44,6 +44,7 @@ jobs:
 
             - name: Download Game Engine
               run: |
+                  mkdir ./.bin
                   wget --output-document ./.bin/dotsandboxes-linux https://github.com/PSH-Computing-AI-club/competition-spring-2025-dotsandboxes/releases/latest/download/dotsandboxes-linux
 
             - name: Clone Competitor Repositories
