fix: added missing dependency download to practice brackets workflow

--- a/.github/workflows/practice-brackets.yaml
+++ b/.github/workflows/practice-brackets.yaml
@@ -44,6 +44,9 @@ jobs:
               with:
                   deno-version: 2.1.4
 
+            - name: Download Dependencies
+              run: deno task deps:cache
+
             - name: Download Game Engine
               run: |
                   mkdir ./.bin
